# BennSryaStore

./: .dockerignore  .env  .gitignore  CNAME  Dockerfile  db.sqlite3  digiflazz_dummy.json  digiflazz_dump.json  docker-compose.yaml  inventory.ini  pyproject.toml  readme.md
bensryaa/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
bensryaa/helpers/: forms_mapping.py
bensryaa/management/commands/: check_digiflazz.py  fix_products.py
bensryaa/migrations/: 0001_initial.py  0002_remove_product_price_productvariant.py  0003_product_price.py  0004_order.py  0005_product_extra_input_label_product_extra_input_type.py  0006_cartitem.py  0007_order_ref_id.py  0008_emailotp.py  0009_delete_emailotp.py  0010_remove_order_product_remove_order_user_and_more.py  0011_product_desc_alter_product_code.py  0012_alter_product_image_url.py  0013_product_category_alter_product_image_url.py  0014_alter_product_options.py  0015_product_brand.py
bensryaa/services/: digiflazz.py
bensryaa/templates/admin/: product_changelist.html
bensryaa/templates/registration/: login.html  register.html
bensryaa/templates/store/: admin_dashboard.html  base.html  check_order.html  dashboard.html  index.html  order_detail.html  order_list.html  payment_page.html  prduct_detail.html  product_detail.html  profile.html  transaction_history.html
bensryaa/templatetags/: custom_filters.py
data/: database.sqlite  keys.json
data/nginx/proxy_host/: 2.conf
letsencrypt/renewal/: npm-4.conf
store/: settings.py  urls.py
store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+5 files in other folders)
